--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -1,4 +1,4 @@
-    <span class="{{terzine.tagName}}" appAddAttr appReplaceEl *ngFor="let terzine of terzine?.childNodes" [data]="terzine">
-        {{ terzine.text }}
-       <app-main-text [terzine]="terzine"></app-main-text>
+    <span *ngFor="let terzina of main_text?.childNodes">
+        {{ terzina.text }}
+       <app-main-text [main_text]="terzina"></app-main-text>
     </span>
