--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,19 @@
+@font-face {
+    font-family: Humanistic;
+    src: url(../assets/font/Humanistic.ttf);
+}
+
+@font-face {
+    font-family: Artifex;
+    src: url(../assets/font/FontsFree-Net-artifex-hand-cf-bold.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-size: 100%;
+    font-family: Humanistic;
 }
 
 div.text {
@@ -24,6 +35,7 @@ section.paraphrase {
     display: flex;
     justify-content: center;
 }
+
 aside.note-container {
     position: absolute;
     height: 20vh;
