--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -1,4 +1,4 @@
-<span appTransform *ngFor="let terzina of main_text?.childNodes" [rule]="findRule(terzina)" [data]="terzina" [showNote]="showNote">
+<span appTransform *ngFor="let terzina of main_text?.childNodes" [rule]="findRule(terzina)" [data]="terzina">
     {{ terzina.text }}
-   <app-main-text *ngIf="!terzina.isText" [main_text]="terzina" [rules]="rules"></app-main-text>
+   <app-main-text *ngIf="!terzina.isText" [main_text]="terzina" [rules]="rules" [showNote]="showNote"></app-main-text>
 </span>
