--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="text">
    <section class="main-text">
-      <app-main-text [main_text]="main_text" [rules]="rules" [showNote]="showNote"></app-main-text>
+      <app-main-text [main_text]="main_text"></app-main-text>
    </section>
-   <aside class="note-container" *ngIf="showNote"></aside>
+   <aside class="note-container" *ngIf="this.settings.showNote">
+      <button (click)="hideNote()">close</button>
+   </aside>
 </div>
