--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="text">
    <section class="main-text">
-      <app-main-text [main_text]="main_text" [rules]="rules"></app-main-text>
+      <app-main-text [main_text]="main_text"></app-main-text>
    </section>
    <section class="paraphrase" *ngIf="this.settings.showParaphrase">
       <app-paraphrase [paraphrase]="paraphrase"></app-paraphrase>
