--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngFor="let terzina of main_text?.childNodes">
-    <span appTransform *ngIf="!findRule(terzina)?.condition" [rule]="findRule(terzina)" [data]="terzina">
+    <span appTransform *appShowConditionally="this.settings[findRule(terzina)?.condition || 'noCondition']" [rule]="findRule(terzina)" [data]="terzina">
         {{ terzina.text }}
-        <app-main-text [main_text]="terzina" [rules]="rules">
+        <app-main-text [main_text]="terzina" [rule]="findRule(terzina)">
         </app-main-text>
     </span>
 </ng-container>
