added accent structure

--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -1,10 +1,7 @@
 <ng-container *ngFor="let terzina of main_text?.childNodes">
-    <span *appShowConditionally="this.settings[findRule(terzina)?.condition || 'noCondition']">
-        <span appTransform [data]="terzina"
-            *appShowConditionally="this.settings[findRule(terzina)?.condition || 'noCondition']"
-            [rule]="findRule(terzina)">
-            {{ terzina.text }}
-            <app-main-text [main_text]="terzina" [rule]="findRule(terzina)">
+    <span *ngIf="this.settings[findRule(terzina)?.condition || 'noCondition']">
+        <span appTransform [data]="terzina" [rule]="findRule(terzina)">{{ terzina.text }}<app-main-text
+                *ngIf="!terzina.isText" [main_text]="terzina" [rule]="findRule(terzina)">
             </app-main-text>
         </span>
     </span>
