--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -10,6 +10,10 @@ p.endecasillabo span.line-number {
     position: absolute;
     transform: translateX(-2.5rem);
 }
+p.endecasillabo span.accent {
+    background-color: #3af;
+    padding: 0px .2rem;
+}
 .note {
     position: absolute;
     transform: translateX(-.4rem);
