--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -1,8 +1,8 @@
 div.terzina {
-    margin-bottom: 3rem;
+    margin-bottom: 3.5rem;
 }
 p.endecasillabo {
-    margin-bottom: .8rem;
+    margin-bottom: .9rem;
     font-size: 1.15rem;
     position: relative;
 }
@@ -10,14 +10,16 @@ p.endecasillabo span.line-number {
     position: absolute;
     transform: translateX(-2.5rem);
 }
-p.endecasillabo span.accent {
-    background-color: #3af;
-    padding: 0px .2rem;
+p.endecasillabo span.primary-accent {
+    border-bottom: 3px solid rgb(255, 160, 51);
+}
+p.endecasillabo span.secondary-accent {
+    border-bottom: 3px solid rgb(51, 255, 211);
 }
 .note {
     position: absolute;
     transform: translateX(-.4rem);
-    top: -.35rem;
+    top: -.3rem;
     width: .5rem;
     height: .5rem;
     border-radius: 50%;
