--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
-<div class="text">
-   <section class="main-text">
-      <app-main-text [main_text]="main_text"></app-main-text>
-   </section>
-   <section class="paraphrase" *ngIf="this.settings.showParaphrase">
-      <app-paraphrase [paraphrase]="paraphrase"></app-paraphrase>
-   </section>
-   <app-settings></app-settings>
-   <aside class="note-container" *ngIf="this.settings.showNote">
-      <button (click)="hideNote()">close</button>
-   </aside>
+<div class="main-container">
+   <h1 class="cantus">Canto I</h1>
+   <div class="text">
+      <section class="main-text">
+         <h2 *ngIf="this.settings.showParaphrase">Testo</h2>
+         <app-main-text [main_text]="main_text"></app-main-text>
+      </section>
+      <section class="paraphrase" *ngIf="this.settings.showParaphrase">
+         <h2>Parafrasi</h2>
+         <app-paraphrase [paraphrase]="paraphrase"></app-paraphrase>
+      </section>
+      <app-settings></app-settings>
+      <aside class="note-container" *ngIf="this.settings.showNote">
+         <button (click)="hideNote()">close</button>
+      </aside>
+   </div>
 </div>
