--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,78 +1,44 @@
 @font-face {
-    font-family: Humanistic;
-    src: url(../assets/font/Humanistic.ttf);
+    font-family: "IMFell";
+    src: url("../fonts/IMFellGreatPrimer-Regular.ttf");
 }
 
 @font-face {
-    font-family: Artifex;
-    src: url(../assets/font/FontsFree-Net-artifex-hand-cf-bold.ttf);
+    font-family: "Illuminating";
+    src: url("../fonts/ArtOfIlluminating.ttf");
 }
 
 @font-face {
-    font-family: FellGreatPrimer;
-    src: url(../assets/font/IMFellGreatPrimer-Regular.ttf);
+    font-family: "Palemonas";
+    src: url("../fonts/PalemMUFI-reg.ttf");
 }
 
 @font-face {
-    font-family: Artifika;
-    src: url(../assets/font/Artifika-Regular.ttf);
+    font-family: "Artifika";
+    src: url("../fonts/Artifika-Regular.ttf");
 }
 
-@font-face {
-    font-family: Junicode;
-    src: url(../assets/font/Junicode.ttf);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 !important;
 }
 
-@font-face {
-    font-family: Palemonas;
-    src: url(../assets/font/PalemMUFI-reg.ttf);
+.overlay {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: #2d2d2d;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: .3;
 }
 
-@font-face {
-    font-family: Symbola;
-    src: url(../assets/font/Symbola.ttf);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 100%;
-    font-family: Palemonas;
-}
-
-div.main-container {
-    padding: 2rem;
-}
-
-div.main-container h1.cantus {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 1.5rem;
-}
-
-div.text {
-    padding: 1.2rem;
-    display: flex;
-    justify-content: center;
-}
-
-div.text section {
-    padding: 0 2rem;
-}
-
-div.text section h2 {
-    font-family: FellGreatPrimer;
-    text-align: center;
-    font-size: 1.2rem;
-    margin-bottom: 1.5rem;
-}
-
-aside.note-container {
-    position: absolute;
-    height: 20vh;
-    width: 100%;
-    border: 1px solid black;
-    bottom: 0;
-    background-color: #fff;
+.tooltip {
+    font-family: "Palemonas";
+    font-size: 1.1rem;
 }
