--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -1,34 +1,28 @@
 div.terzina {
     margin-bottom: 3.5rem;
 }
+
 p.endecasillabo {
     margin-bottom: .9rem;
     font-size: 1.3rem;
     position: relative;
+    font-family: 'Palemonas';
 }
+
 p.endecasillabo span.line-number {
     position: absolute;
     transform: translateX(-2.5rem);
 }
-p.endecasillabo span.primary-accent {
-    border-bottom: 3px solid rgb(255, 160, 51);
+
+.primary-accent {
+    border-bottom: 1px solid red;
 }
-p.endecasillabo span.secondary-accent {
-    border-bottom: 3px solid rgb(51, 255, 211);
+
+.secondary-accent {
+    border-bottom: 1px solid rgb(0, 255, 42);
 }
-.note {
-    position: absolute;
-    transform: translateX(-.4rem);
-    top: -.3rem;
-    width: .5rem;
-    height: .5rem;
-    border-radius: 50%;
-    background-color: #2d2d2d;
-    cursor: pointer;
-}
-.note:hover {
-    opacity: .8;
-}
-span.switch {
-    
+
+.sinalefe,
+.sineresi {
+    font-weight: 600;
 }
