--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,6 @@
 .header {
     color: white;
-    font-family: "IMFell";
+    font-family: "Palemonas";
     z-index: 1;
     background-color: #2d2d2d;
 }
