--- a/src/app/main-text/main-text.component.css
+++ b/src/app/main-text/main-text.component.css
@@ -26,3 +26,13 @@ p.endecasillabo span.line-number {
 .sineresi {
     font-weight: 600;
 }
+
+/** PARAPHRASE **/
+
+p.terzina-paraphrase {
+    font-size: 1.15rem;
+}
+p.terzina-paraphrase span.paraphrase-fragment {
+    margin-bottom: .9rem;
+    display: inline-block;
+}
