--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
 <div class="text container-fluid p-3 d-flex justify-content-center">
-    <section class="main-text">
-        <h3>Testo</h3>
+    <section class="text-column main-text">
+        <h3 class="py-3">Testo</h3>
         <app-main-text [main_text]="commedy_text" [settings]="settings"></app-main-text>
     </section>
-    <section class="paraphrase-text" *ngIf="this.settings.showParaphrase">
-        <h3>Parafrasi</h3>
+    <section class="text-column paraphrase-text" *ngIf="this.settings.showParaphrase">
+        <h3 class="py-3">Parafrasi</h3>
         <app-main-text [main_text]="paraphrase_text"></app-main-text>
     </section>
 </div>
