--- a/src/app/main-text/main-text.component.html
+++ b/src/app/main-text/main-text.component.html
@@ -22,20 +22,20 @@
         </span>
     </ng-container>
     <ng-container *ngSwitchCase="'lb'">
-        <br/>
+        <br />
     </ng-container>
     <ng-container *ngSwitchCase="'lg'">
         <div id="{{ findAttributeValue(subtext.attributes, 'xml:id') }}"
             class="{{ findAttributeValue(subtext.attributes, 'type') }}"
             *ngIf="isSubset([{name: 'type', value: 'terzina'}], subtext.attributes)">
-            <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings">
+            <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings" [notes]="notes">
             </app-main-text>
         </div>
     </ng-container>
     <ng-container *ngSwitchCase="'l'">
         <p class="{{ findAttributeValue(subtext.attributes, 'rend') }}"
             *ngIf="isSubset([{name: 'rend', value: 'endecasillabo'}], subtext.attributes)">
-            <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings">
+            <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings" [notes]="notes">
             </app-main-text>
         </p>
     </ng-container>
@@ -44,7 +44,8 @@
     </ng-container>
     <ng-container *ngSwitchCase="'hi'">
         <span class="{{ findAttributeValue(subtext.attributes, 'rend') }}"
-            *ngIf="this.settings.showMetric && (isSubset([{name: 'rend', value: 'sinalefe'}], subtext.attributes)||isSubset([{name: 'rend', value: 'sineresi'}], subtext.attributes))" placement="top" ngbTooltip="{{ findAttributeValue(subtext.attributes, 'rend') }}" tooltipClass="cicciolina">
+            *ngIf="this.settings.showMetric && (isSubset([{name: 'rend', value: 'sinalefe'}], subtext.attributes)||isSubset([{name: 'rend', value: 'sineresi'}], subtext.attributes))"
+            placement="top" ngbTooltip="{{ findAttributeValue(subtext.attributes, 'rend') }}" tooltipClass="cicciolina">
             <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings">
             </app-main-text>
         </span>
@@ -65,6 +66,13 @@
             <app-main-text *ngIf="!subtext.isText" [main_text]="subtext" [settings]="settings">
             </app-main-text>
         </span>
+    </ng-container>
+    <ng-container *ngSwitchCase="'note'">
+        <a class="{{ findAttributeValue(subtext.attributes, 'type') }}"
+            href="{{ findAttributeValue(subtext.attributes, 'corresp') }}"
+            *ngIf="this.settings.showNotes && isSubset([{name: 'type', value: 'note'}], subtext.attributes)" (click)="showNote(findAttributeValue(subtext.attributes, 'corresp'))">
+            <sup>[{{findAttributeValue(subtext.attributes, 'n') }}]</sup>
+        </a>
     </ng-container>
     <span *ngSwitchDefault>{{subtext.text}}<app-main-text *ngIf="!subtext.isText" [main_text]="subtext"
             [settings]="settings">
