--- a/src/app/header/dropdown/dropdown.component.html
+++ b/src/app/header/dropdown/dropdown.component.html
@@ -10,7 +10,7 @@
         <li class="dropdown-item" *ngFor="let switch of switch_list">
             <div class="form-check form-switch">
                 <label class="form-check-label" for="{{ switch.name }}">{{switch.label}}</label>
-                <input class="form-check-input" type="checkbox" id="{{ switch.name }}" (change)="handleSettings(switch.action)">
+                <input class="form-check-input" type="checkbox" id="{{ switch.name }}" (change)="handleSettings(switch.action)" [checked]="this.settings[switch.action]">
             </div>
         </li>
     </ul>
