--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
         <app-main-text [main_text]="paraphrase_text"></app-main-text>
     </section>
 </div>
+<app-note-container></app-note-container>
 <app-navigation></app-navigation>
 <div *ngIf="this.settings.openNav" class="overlay"></div>
