--- a/src/app/note-container/note-container.component.css
+++ b/src/app/note-container/note-container.component.css
@@ -7,3 +7,25 @@
 .show {
     transform: translate(-50%, 0);
 }
+.offcanvas-header {
+    padding: .5rem 1rem;
+}
+.offcanvas-header h5 {
+    font-family: "Palemonas";
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-right: 1rem;
+}
+hr {
+    margin: 0;
+}
+.info-icon {
+    background-color: #2d2d2d;
+    color: #fff;
+    height: 1.5rem;
+    width: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
