--- a/src/app/note-container/note-container.component.html
+++ b/src/app/note-container/note-container.component.html
@@ -1,10 +1,14 @@
 <div class="offcanvas offcanvas-bottom w-75" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel"
     data-bs-scroll="true" data-bs-backdrop="true">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasBottomLabel">Offcanvas bottom</h5>
+        <div class="d-flex align-items-center">
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Nota n. {{note_id?.replace('note-', '')}}</h5>
+            <fa-icon class="info-icon" [icon]="'info'"></fa-icon>
+        </div>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="offcanvas-body small">
-            <app-note-text [note_text]="notes" [note_id]="note_id"></app-note-text>
+    <hr />
+    <div class="offcanvas-body">
+        <app-note-text [note_text]="notes" [note_id]="note_id"></app-note-text>
     </div>
 </div>
