--- a/src/app/note-container/note-container.component.html
+++ b/src/app/note-container/note-container.component.html
@@ -2,8 +2,8 @@
     data-bs-scroll="true" data-bs-backdrop="true">
     <div class="offcanvas-header">
         <div class="d-flex align-items-center">
-            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Nota n. {{note_id?.replace('note-', '')}}</h5>
-            <fa-icon class="info-icon" [icon]="'info'"></fa-icon>
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Nota {{note_id?.replace('note-', '')}}</h5>
+            <fa-icon class="info-icon" [icon]="'info-circle'"></fa-icon>
         </div>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
