--- a/src/app/note-container/note-container.component.css
+++ b/src/app/note-container/note-container.component.css
@@ -15,17 +15,11 @@
     font-size: 1.5rem;
     font-weight: bold;
     padding-right: 1rem;
+    font-variant: small-caps;
 }
 hr {
     margin: 0;
 }
 .info-icon {
-    background-color: #2d2d2d;
-    color: #fff;
-    height: 1.5rem;
-    width: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+    font-size: 1.4rem;
 }
