--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Palemonas";
+    src: url("../src/fonts/PalemMUFI-reg.ttf");
+    font-display: swap;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 !important;
+}
+
+.tooltip {
+    font-family: "Palemonas";
+    font-size: 1.1rem;
+}
