--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,6 @@
-<nav class="nav-menu" [ngClass]="{'fadeIn': this.settings.openNav}"></nav>
+<nav class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas-start" aria-labelledby="offcanvasStartLabel"
+    data-bs-scroll="true" data-bs-backdrop="true">
+    <div class="offcanvas-body">
+        <div></div>
+    </div>
+</nav>
