--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -30,3 +30,11 @@ h2 {
     width: auto;
     padding-right: 1.5rem;
 }
+
+.menu-icon {
+    font-size: 2.2rem;
+    cursor: pointer;
+}
+.menu-icon:hover {
+    opacity: .8;
+}
