--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="text container-fluid p-3 d-flex justify-content-center">
     <section class="text-column main-text">
-        <h3 class="py-3">Testo</h3>
+        <h3 id="scrollRef" class="py-3">Testo</h3>
         <app-main-text [main_text]="commedy_text" [settings]="settings"></app-main-text>
     </section>
     <section class="text-column paraphrase-text" *ngIf="this.settings.showParaphrase">
