--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <h3 class="py-5" #scrollStart>Testo</h3>
         <app-main-text [main_text]="commedy_text" [settings]="settings" [scrollRef]="scrollRef"></app-main-text>
     </section>
-    <section class="text-column paraphrase-text" *ngIf="this.settings.showParaphrase">
+    <section class="text-column paraphrase-text" [ngClass]="{ 'visible': this.settings.showParaphrase }">
         <h3 class="py-5">Parafrasi</h3>
         <app-main-text [main_text]="paraphrase_text"></app-main-text>
     </section>
